[package]
name = "unity-versions-service"
version = "0.1.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
build = "build.rs"
description = "A simple server application which provides static endpoints for released unity versions."
repository = "https://github.com/Larusso/unity_version_service"
readme = "README.md"
keywords = ["unity","versions"]
categories = ["development-tools"]
license = "Apache-2.0"
[badges]
travis-ci = { repository = "Larusso/unity-versions-service", branch = "master" }
maintenance = { status = "actively-developed" }
[dependencies]
iron = "0.6.0"
log = "0.4.5"
router = "0.6.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.32"
serde_yaml = "0.8.7"
time = "0.1.40"
cli_core = "0.1.0"
reqwest = "0.9.4"
tempfile = "3"
regex = "1.0"
base64 = "0.10.0"
[build-dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8.7"
serde_json = "1.0.32"
