[package]
name = "unity-versions-service"
version = "0.1.0"
authors = ["Manfred Endres <manfred.endres@tslarusso.de>"]
build = "build.rs"
edition = "2018"
description = "A simple server application which provides static endpoints for released unity versions."
repository = "https://github.com/Larusso/unity_version_service"
readme = "README.md"
keywords = ["unity","versions"]
categories = ["development-tools"]
license = "Apache-2.0"
[badges]
travis-ci = { repository = "Larusso/unity-versions-service", branch = "master" }
maintenance = { status = "actively-developed" }
[dependencies]
iron = "0.6.0"
log = "0.4.14"
router = "0.6.0"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
serde_yaml = "0.8.17"
time = "0.2.25"
cli_core = "0.1.0"
reqwest = "0.9.4"
tempfile = "3"
regex = "1.4"
base64 = "0.21.0"
[build-dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_yaml = "0.8.17"
serde_json = "1.0.66"
